--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ apply plugin: 'kotlin-jpa'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.jetbrains.kotlin.plugin.jpa'
 
 group = 'com.jachouni'
 version = '0.0.1'
@@ -41,12 +42,8 @@ repositories {
     mavenCentral()
 }
 
-plugins {
-    id "org.jetbrains.kotlin.plugin.jpa" version "1.2.71"
-}
-
 dependencies {
-    implementation("org.springframework.boot:spring-boot-starter-data-rest")
+    implementation("org.springframework.boot:spring-boot-starter-web")
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
