--- a/build.gradle
+++ b/build.gradle
@@ -50,12 +50,16 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("org.springframework.boot:spring-boot-devtools")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
+    // against:  java.lang.NoClassDefFoundError: javax/xml/bind/JAXBException if java >= 9.0
+    // https://stackoverflow.com/questions/43574426/how-to-resolve-java-lang-noclassdeffounderror-javax-xml-bind-jaxbexception-in-j
+    implementation 'javax.xml.bind:jaxb-api:2.3.0'
+    implementation 'org.ajbrown:name-machine:1.0.0'
     runtimeOnly('com.h2database:h2')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 // See: https://kotlinexpertise.com/hibernate-with-kotlin-spring-boot/
- allOpen {
+allOpen {
     annotation("javax.persistence.Entity")
     annotation("javax.persistence.MappedSuperclass")
     annotation("javax.persistence.Embeddable")
