Added child repo plus controller. Finished group

--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,8 @@ dependencies {
     implementation('com.fasterxml.jackson.module:jackson-module-kotlin')
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
-    implementation("org.springframework.boot:spring-boot-devtools")
-    implementation("org.springframework.boot:spring-boot-starter-actuator")
+//    implementation("org.springframework.boot:spring-boot-devtools")
+//    implementation("org.springframework.boot:spring-boot-starter-actuator")
     // against:  java.lang.NoClassDefFoundError: javax/xml/bind/JAXBException if java >= 9.0
     // https://stackoverflow.com/questions/43574426/how-to-resolve-java-lang-noclassdeffounderror-javax-xml-bind-jaxbexception-in-j
     implementation 'javax.xml.bind:jaxb-api:2.3.0'
